# Drawing_Spells_Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  directory_tree.txt  vcpkg.json
Drawing_Spells_Simulator/: CMakeLists.txt  Drawing_Spells_Simulator.cpp  Drawing_Spells_Simulator.h
include/: Drawing_Spells_Simulator.hpp
spells/cantrip/: fire_bolt.json
spells/level1/: thunderwave.json
spells/level2/: lightning_bolt.json  shatter.json
spells/level3/: fireball.json  lightning_bolt.json
spells/level4/: ice_storm.json
spells/level5/: cone_of_cold.json  telekinesis.json
src/: Drawing_Spells_Simulator.cpp  config.hpp  main.cpp  main.hpp
src/components/: camera.hpp  dot.hpp  drawing_module.hpp  enemy.hpp  game_object.hpp  player.hpp  spell.hpp
src/systems/: camera_system.cpp  camera_system.hpp  drawing_module.cpp  drawing_module.hpp  enemy_system.cpp  enemy_system.hpp  player_system.cpp  player_system.hpp  spell_loader.cpp  spell_loader.hpp  spell_parser.cpp  spell_parser.hpp  spell_parser_utils.cpp  spell_parser_utils.hpp  spell_system.cpp  spell_system.hpp  spell_utils.cpp  spell_utils.hpp
src/systems/helpers/: init_utils.cpp  init_utils.hpp  rendering_utils.cpp  rendering_utils.hpp  spell_damage_check.cpp  spell_damage_check.hpp  spell_parser.cpp  spell_parser.hpp  spell_parser_utils.hpp  spell_utils.cpp  spell_utils.hpp
